--- a/Front End/index.html
+++ b/Front End/index.html
@@ -51,7 +51,7 @@
       bottom: 0;
       right: 0;
       left: 0;
-      background-color:azure;
+      background-color:white;
       overflow: hidden;
       z-index: 10;
       transition: opacity 0.5s ease-out;
@@ -230,7 +230,7 @@
       </div>
     </section>
 
-    <section class="features" id="features">
+    <section class="features" id="features" style="background-color:lightgoldenrodyellow">
       <div class="container">
         <div class="section-heading">
           <div class="section-heading text-center">
@@ -240,14 +240,33 @@
             <div class="col-lg-6">
               <div class="project">
                 <div class="overlay">
-                  <h4 style="padding-left: 8px;padding-top:10px ;color: blueviolet;font-weight: 500"><strong>STOP WILDLIFE CRIME</strong></h4>
+                  <div class="row">
+                    <div class="col-lg-4">
+                        <h4 style="padding-left: 8px;padding-top:10px ;color: blueviolet;font-weight: 500"><strong>STOP WILDLIFE CRIME</strong></h4>
+                        <p style="padding-left: 8px;font-size: 15px">Together with local governments and wildlife rangers, 
+                          help us stop the suffering with gifts to crack down wildlife crime.</p>
+                    </div>
+                    <div class="col-lg-6">
+                      <img src="img/save.jpg" height="300" style="padding-top: 0px;padding-left: 50px">
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="project">
                 <div class="overlay">
-                  <h4 style="padding-left: 8px;padding-top: 10px;color: blueviolet;font-weight: 500"><strong>JOIN WWF'S CONSERVATION EFFORT</strong></h4>
+                  <div class="row">
+                    <div class="col-lg-4">
+                        <h4 style="padding-left: 8px;padding-top: 10px;color: blueviolet;font-weight: 500"><strong>JOIN WWF'S CONSERVATION EFFORT</strong></h4>
+                        <p style="padding-left: 8px;font-size: 15px"> You can protect threatened species and their habitats today with a donation to World Wildlife Fund.
+                           Your support of WWF's global conservation work will make a world of difference.
+                        </p>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="img/save1.gif" height="300" style="padding-top: 0px;padding-left: 50px">
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
