caroussel error fixed

--- a/Front End/index.html
+++ b/Front End/index.html
@@ -95,6 +95,7 @@
       <li class="active"><a href="#page-top"> <h3> Home &nbsp &nbsp </h3> </a></li>
       <li><a class = nav-link js-scroll-trigger href="#download"> <h3> Facts &nbsp &nbsp </h3> </a></li>
       <li><a class = nav-link js-scroll-trigger  href="#features"> <h3> Why They Matter &nbsp &nbsp </h3></a></li>
+      <li><a class = nav-link js-scroll-trigger  href="#helpus"> <h3> How Can You Help &nbsp &nbsp </h3></a></li>
       <li><a class = nav-link js-scroll-trigger  href="#contact"> <h3> Contact Us &nbsp &nbsp </h3></a></li>
     </ul>
   </div>
@@ -112,7 +113,7 @@
               <br/>
               <br/>
               <center>
-              <h1 class="mb-5"style="color:#300"> Marine Iguana</h1>
+              <p> <font size = "100"> Marine Iguana </font></p>
               </center>
             </div>
           </div>
@@ -224,7 +225,7 @@
       </div>
     </section>
 
-    <section class="features" id="features" style="background-color:lightgoldenrodyellow">
+    <section id="helpus" class="features" style="background-color:lightgoldenrodyellow">
       <div class="container">
         <div class="section-heading">
           <div class="section-heading text-center">
