--- a/Front End/index.html
+++ b/Front End/index.html
@@ -168,10 +168,12 @@
 
     <section class="download bg-primary text-center" id="download">
       <div class="container">
+        <div class="section-heading text-center">
+          <h2 style="color:indianred"> FACTS </h2>
+        </div>
         <div class="row">
           <div class="col-md-8 mx-auto">
             <div class = "box">
-                  <h2 style="color:#180"> FACTS </h2>
                   <h3 style="color: brown"> One of the main nesting zones for iguanas is located on a central tourist beach in the waterfront area of Puerto Villamil on Isabela Island. For several years, the Galápagos National Park protected only the central part of the nesting zone. In 2012, WWF, the Municipality of Isabela and the Charles Darwin Foundation extended the protected area to include the entire nesting zone. As part of this effort, additional signs for both tourists and local communities inform them about the importance of this nesting zone. A temporary fence was also built to protect the area and allow iguanas to pass through.
                   </h3> 
             </div>
@@ -238,6 +240,7 @@
           </div>
           <div class="row">
             <div class="col-lg-6">
+              <a href="https://support.worldwildlife.org/site/Advocacy?cmd=display&page=UserAction&id=664&_ga=2.208440210.1244768763.1534239934-1249873831.1533565270" style="color: black"  target="_blank">
               <div class="project">
                 <div class="overlay">
                   <div class="row">
@@ -252,8 +255,10 @@
                   </div>
                 </div>
               </div>
+              </a>
             </div>
             <div class="col-lg-6">
+              <a href="https://support.worldwildlife.org/site/SPageNavigator/donate_to_charity" style="color: black" target="_blank">
               <div class="project">
                 <div class="overlay">
                   <div class="row">
@@ -269,6 +274,7 @@
                   </div>
                 </div>
               </div>
+              </a>
             </div>
           </div>
         </div>
